opam-version: "2.0"
name: "daypack-lib"
version: "0.1"
synopsis: "One-line description"
description: """
Longer description
"""
maintainer: "Darren Ldl <darrenldldev@gmail.com>"
authors: "Daypack developers"
license: "MIT"
homepage: "https://github.com/daypack-dev/daypack"
bug-reports: "https://github.com/daypack-dev/daypack/issues"
dev-repo: "https://github.com/daypack-dev/daypack.git"
depends: [
  "ocaml"
  "oseq"
  "calendar"
  "biniou"
  "yojson"
  "atdgen"
  "atdgen-runtime"
  "bisect_ppx" {dev & >= "2.0.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs ]
]
install: ["dune" "build" "@install"]
