(library
 (flags     (-w "+a-4-9-29-37-40-42-44-48-50-32"))
 (name daypack_lib)
 (public_name daypack-lib)
 (libraries unix
            calendar
            oseq
            biniou
            yojson
            atdgen-runtime)
 )

(rule
 (targets sched_j.ml
          sched_j.mli)
 (deps    sched.atd)
 (action  (run atdgen -j -j-std %{deps})))

(rule
 (targets sched_t.ml
          sched_t.mli)
 (deps    sched.atd)
 (action  (run atdgen -t %{deps})))

(rule
 (targets map_utils_j.ml
          map_utils_j.mli)
 (deps    map_utils.atd)
 (action  (run atdgen -j -j-std %{deps})))

(rule
 (targets map_utils_t.ml
          map_utils_t.mli)
 (deps    map_utils.atd)
 (action  (run atdgen -t %{deps})))

(rule
 (targets set_utils_j.ml
          set_utils_j.mli)
 (deps    set_utils.atd)
 (action  (run atdgen -j -j-std %{deps})))

(rule
 (targets set_utils_t.ml
          set_utils_t.mli)
 (deps    set_utils.atd)
 (action  (run atdgen -t %{deps})))

(rule
 (targets int64_j.ml
          int64_j.mli)
 (deps    int64.atd)
 (action  (run atdgen -j -j-std %{deps})))

(rule
 (targets int64_t.ml
          int64_t.mli)
 (deps    int64.atd)
 (action  (run atdgen -t %{deps})))

(rule
 (targets time_slot_ds_j.ml
          time_slot_ds_j.mli)
 (deps    time_slot_ds.atd)
 (action  (run atdgen -j -j-std %{deps})))

(rule
 (targets time_slot_ds_t.ml
          time_slot_ds_t.mli)
 (deps    time_slot_ds.atd)
 (action  (run atdgen -t %{deps})))

(rule
 (targets sched_req_data_unit_skeleton_j.ml
          sched_req_data_unit_skeleton_j.mli)
 (deps    sched_req_data_unit_skeleton.atd)
 (action  (run atdgen -j -j-std %{deps})))

(rule
 (targets sched_req_data_unit_skeleton_t.ml
          sched_req_data_unit_skeleton_t.mli)
 (deps    sched_req_data_unit_skeleton.atd)
 (action  (run atdgen -t %{deps})))

(rule
 (targets task_ds_j.ml
          task_ds_j.mli)
 (deps    task_ds.atd)
 (action  (run atdgen -j -j-std %{deps})))

(rule
 (targets task_ds_t.ml
          task_ds_t.mli)
 (deps    task_ds.atd)
 (action  (run atdgen -t %{deps})))

(rule
 (targets sched_req_ds_j.ml
          sched_req_ds_j.mli)
 (deps    sched_req_ds.atd)
 (action  (run atdgen -j -j-std %{deps})))

(rule
 (targets sched_req_ds_t.ml
          sched_req_ds_t.mli)
 (deps    sched_req_ds.atd)
 (action  (run atdgen -t %{deps})))

(rule
 (targets time_t.ml
          time_t.mli)
 (deps    time.atd)
 (action  (run atdgen -t %{deps})))

(rule
 (targets time_j.ml
          time_j.mli)
 (deps    time.atd)
 (action  (run atdgen -j -j-std %{deps})))

(rule
 (targets time_pattern_t.ml
          time_pattern_t.mli)
 (deps    time_pattern.atd)
 (action  (run atdgen -t %{deps})))

(rule
 (targets time_pattern_j.ml
          time_pattern_j.mli)
 (deps    time_pattern.atd)
 (action  (run atdgen -j -j-std %{deps})))

(rule
 (targets time_profile_t.ml
          time_profile_t.mli)
 (deps    time_profile.atd)
 (action  (run atdgen -t %{deps})))

(rule
 (targets time_profile_j.ml
          time_profile_j.mli)
 (deps    time_profile.atd)
 (action  (run atdgen -j -j-std %{deps})))

(rule
 (targets time_profile_store_t.ml
          time_profile_store_t.mli)
 (deps    time_profile_store.atd)
 (action  (run atdgen -t %{deps})))

(rule
 (targets time_profile_store_j.ml
          time_profile_store_j.mli)
 (deps    time_profile_store.atd)
 (action  (run atdgen -j -j-std %{deps})))